# py-project-maker

./: .env.example  .ruff.toml  LICENSE  README.md  cspell.json  pyproject.toml
.github/workflows/: get-version.yml  publish.yml  tests.yml
ai/stories/: 01.01.story.md  01.05.story.md  01.1A.story.md
docs/: coding-standards.md  contributing.md  design.md  environment-vars.md  tech_stack.md
py_project_maker/: __about__.py
python_project_template/: __about__.py  __init__.py  main.py
src/pyhatchery/: __about__.py  cli.py  example_broad_except.py # New file containing 'except Exception:' to test BLE001  main.py  names.py
src/pyhatchery/components/: config_loader.py  http_client.py  interactive_wizard.py  name_service.py
src/pyhatchery/utils/: config.py
tests/: test_version.py
tests/integration/: test_cli_end_to_end.py  test_project_generation.py
tests/unit/: test_cli.py  test_cli_non_interactive.py  test_click_cli.py
tests/unit/components/: test_config_loader.py  test_http_client.py  test_interactive_wizard.py  test_project_generator.py
