[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "python-project-template"
dynamic = ["version"]
description = "Add your description here"
authors = [{ name = "Your Name", email = "Your@Email.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/yourname/python-project-template"
"Releases" = "https://yourname.github.io/python-project-template/releases"
"Bug Tracker" = "https://yourname.github.io/python-project-template/issues"
"Documentation" = "https://yourname.github.io/python-project-template/#readme"

# [project.scripts]
# myscript = "python_project_template.cli:main"

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "hatchling>=1.27.0",
    "pylint>=3.3.6",
    "pytest>=8.3.5",
    "ruff>=0.5.0",
    "uv>=0.7.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

# ell hatchling where to find the version variable
[tool.hatch.version]
path = "python_project_template/__about__.py"

[tool.uv]
index = [
    { name = "testpypi", url = "https://test.pypi.org/simple/", publish-url = "https://test.pypi.org/legacy/", explicit = true },
    { name = "pypi", url = "https://pypi.org/simple/", publish-url = "https://upload.pypi.org/legacy/", explicit = true },
]
