[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "py-project-maker"
dynamic = ["version"]
description = "Add your description here"
authors = [{ name = "Kayvan Sylvan", email = "kayvan@sylvan.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/ksylvan/py-project-maker"
"Releases" = "https://github.com/ksylvan/py-project-maker/releases"
"Bug Tracker" = "https://github.com/ksylvan/py-project-maker/issues"
"Documentation" = "https://github.com/ksylvan/py-project-maker#readme"

# [tool.hatch.build.targets.wheel.shared-scripts]
# "py_project_maker/bin/py-project-maker" = "py-project-maker"

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "hatchling>=1.27.0",
    "pylint>=3.3.7",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "uv>=0.7.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

# Tell hatchling where to find the version variable
[tool.hatch.version]
path = "py_project_maker/__about__.py"

[tool.uv]
index = [
    { name = "testpypi", url = "https://test.pypi.org/simple/", publish-url = "https://test.pypi.org/legacy/", explicit = true },
    { name = "pypi", url = "https://pypi.org/simple/", publish-url = "https://upload.pypi.org/legacy/", explicit = true },
]
